--- a/rc.conf
+++ b/rc.conf
@@ -25,5 +25,5 @@ pf_rules="/etc/pf.conf"
 # IP fORWADING 
 gateway_enable="YES"
 
-# LOCAL UNBOUD (DNS RESOLVER)
+# LOCAL UNBOUND (DNS RESOLVER)
 local_unbound_enable="YES"
